<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.felipe.frutinha.activities.LoginActivity"
    android:orientation="vertical"
    android:background="@drawable/frutinha"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="#FFF"
        android:layout_marginTop="150dp"
        android:padding="20dp"
        >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/userWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <EditText
                android:id="@+id/editUser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:ems="11"
                android:hint="@string/login"
                android:inputType="text"
                android:textColor="#30a7cf"
                android:textColorHint="#30a7cf"
                android:textSize="16sp"
                android:typeface="serif" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/passwordWrapper"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:textColor="#30a7cf"
                android:textColorHint="#30a7cf"
                android:textSize="16sp"
                android:typeface="serif" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="#fa860f"
            android:onClick="btnLogin"
            android:text="@string/btn_login"
            android:textColor="#ffff"
            android:textSize="16sp"
            android:textStyle="bold"
            android:typeface="serif" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/new_user"
            android:layout_marginTop="5dp"
            android:onClick="btnNewUser"
            />


    </LinearLayout>


</LinearLayout>
